<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center|top">
    <com.hf.newmidx.widget.EasyActionbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base"
        android:id="@+id/actionbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/midx"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/info"
            android:textColor="@color/black"/>


        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_height="50dp"
            android:text="@string/sdk_db"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:id="@+id/sdk"
            android:textStyle="bold"
            android:background="@color/base"/>

        <Button
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_height="50dp"
            android:text="@string/own_db"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:id="@+id/own"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:background="@color/base"/>
    </LinearLayout>

</LinearLayout>