<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.hf.newmidx.widget.EasyActionbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base"
        android:id="@+id/actionbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@color/gray"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_scanner_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white" />
         </LinearLayout>

        <TextView
            android:id="@+id/tv_recv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text=""
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text"
            android:singleLine="false"
            android:visibility="gone">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_open"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/scan_open"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/btn_heartbeat"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:visibility="visible"
                    android:layout_marginLeft="10dp"
                    android:text="Heartbeat"
                    android:textColor="@color/white" />
                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/scan_close"
                    android:textColor="@color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btn_trigger"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:text="@string/scan_trigger"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
</LinearLayout>
